# hive_old

./: .gitignore  CLAUDE.md  Makefile  README-basic.md  README.md  REFACTORING_SUMMARY.md  codecov.yml  pyproject.toml  python313_roadmap.md  python_modernization_analysis.md  requirements.txt  test_document_manager.py
.git-hooks/: README.md  commit-msg  pre-commit
.github/: dependabot.yml
.github/workflows/: beaver.yml  ci.yml
.hive/: README.md
.hive/config/: hive_config.yaml  session_config.yaml  worker_config.yaml
.hive/templates/analysis/: analysis_template.md
.hive/templates/design/: design_template.md
.hive/templates/github/: integration_guide.md  pr_template.md
.hive/templates/roles/: queen_template.md
comb/: __init__.py  api.py  file_handler.py  markdown_logger.py  message_router.py  sync_manager.py  work_log_manager.py
config/: claude_config.yaml  github_settings.yaml  protocol_config.yaml  tmux_config.yaml  worker_config.yaml
docs/: README.md  architecture.md  codebase_improvement_plan.md  comb-api.md  github_issue_automation.md  hive_directory_system.md  hive_watch_test_results.md  issue_64_analysis_report.md  issue_84_analysis_report.md  new_architecture_issue_guide.md  poc-guide.md  quickstart-guide.md  quickstart.md  setup-guide.md  success_story_web_dashboard_api_testing.md  troubleshooting.md
examples/: README.md  __init__.py  comb_demo.py  markdown_worklog_demo.py
examples/poc/: README.md  README_issue_solver.md  __init__.py  automated_worker_coordination.py  autonomous_refactoring.py  autonomous_testing.py  beekeeper_autonomous_refactoring.py  beekeeper_autonomous_testing.py  claude_daemon_demo.py  demo_issue_solver.py  enhanced_feature_development.py  issue_solver_agent.py  issue_solver_agent_distributed.py  issue_solver_agent_simple.py  simple_feature_development.py  simple_issue_solver.py  test_combapi.py  tmux_demo.py
examples/poc/models/: __init__.py  message_types.py  task_types.py  worker_types.py
examples/poc/parsers/: __init__.py  user_prompt_parser.py
examples/quickstart/: 01_basic_communication.py  02_task_management.py  03_check_results.py  README.md
examples/templates/: autonomous_agent_template.py  beekeeper_queen_worker_flow.py  comb_api_autonomous_agent.py
examples/tests/: README.md  protocols_test.py
hive/: __init__.py  cli_core.py  tmux_integration.py
hive/agents/: __init__.py  base.py  framework.py  mixins.py
hive/agents/issue_solver/: __init__.py  agent.py  analyzer.py  coordinator.py  parser.py  worker.py
hive/agents_distributed/distributed/: __init__.py  claude_daemon.py  tmux_manager.py
hive/hive_directory/: __init__.py  cache.py  cli.py  config.py  document_manager.py  manager.py  session.py
protocols/: __init__.py  message_protocol.py  message_router_integration.py  protocol_validator.py
queen/: __init__.py  coordinator.py  honey_collector.py  status_monitor.py  task_distributor.py
scripts/: README.md  __init__.py  check-comb.sh  check-dependencies.sh  collect-honey.sh  create_github_issue.py  create_github_pr.py  distribute-nectar.sh  github_issue_helper.py  github_issue_pr_integration.py  hive_cli.py  hive_directory.py  hive_watch.py  init_hive_directory.py  queen_github_integration.py  shutdown-hive.sh  start-cozy-hive.sh  start-small-hive.sh  start_claude_daemon.sh  start_hive_distributed.sh  stop-cozy-hive.sh  stop_claude_daemon.sh  stop_hive_distributed.sh  template_detector.py  template_guide.py  template_ui.py  template_validator.py  test_github_issue_creation.py  test_github_pr_integration.py  test_hive_watch.py  tmux_monitor.py  wake-workers.sh  web_dashboard.py  worker_communication.py
templates/: README.md
templates/communication/: queen_report_template.yaml  task_template.yaml  worker_result_template.yaml
templates/github/: issue_template.md
templates/instructions/: README.md  detailed_templates.md  quick_templates.md
templates/nectar-templates/common-tasks/: bug-fix-template.json  documentation-template.json  feature-implementation-template.json  refactoring-template.json  testing-template.json
templates/projects/: api-only.json  data-analysis.json  simple-site.json  web-app.json
templates/roles/: analyzer.md  architect.md  backend.md  developer.md  devops.md  documenter.md  frontend.md  queen.md  reviewer.md  tester.md
templates/tmux/: workers.json
test_scripts/: typecheck_regression_test.py
tests/: __init__.py  test_basic.py  test_cli.py  test_comb_communication.py  test_comb_sync_manager.py  test_document_manager_coverage.py  test_honey_collection.py  test_markdown_worklog.py  test_queen_coordinator.py  test_queen_status_monitor.py  test_system_integration.py  test_tmux_integration.py
tests/agents/: __init__.py  test_base.py  test_mixins.py
tests/agents/distributed/: __init__.py  test_claude_daemon.py  test_tmux_manager.py
tests/agents/issue_solver/: __init__.py  test_agent.py  test_analyzer.py  test_coordinator.py  test_parser.py  test_worker.py
tests/protocols/: __init__.py  test_message_protocol.py  test_message_router_integration.py  test_protocol_validator.py
tests/web/: __init__.py
tests/web/dashboard/: __init__.py
tests/web/dashboard/api/: __init__.py  test_connection_manager.py  test_dashboard_data_collector.py  test_fastapi_endpoints.py  test_websocket_communication.py
tools/: __init__.py
web/dashboard/: .eslintrc.js  demo.html  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/dashboard/api/: dashboard_api.py
web/dashboard/public/: manifest.json
web/dashboard/src/: App.vue
web/dashboard/src/components/: CommunicationFlow.vue  CommunicationsPanel.vue  DashboardHeader.vue  PerformancePanel.vue  UnifiedHeader.vue  WorkerCard.vue  WorkersSidebar.vue
web/dashboard/src/composables/: useWebSocket.ts
web/dashboard/src/router/: index.ts
web/dashboard/src/stores/: dashboard.ts
web/dashboard/src/styles/: main.css
web/dashboard/templates/: index.html
workers/: __init__.py
workers/configs/: README.md
workers/prompts/: README.md  developer_worker.md  queen_worker.md
(+14 files in other folders)
